# FEM-QUAD4

./: CMakeLists.txt  calculate.cpp  calculate.h  fem initial set.txt  main.cpp  mesh.cpp  mesh.h  read_initial.h  reda_initial.cpp  shape_function.cpp  shape_function.h  static_analysis.cpp  static_analysis.h
